# han

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
front/: package-lock.json
han/: __init__.py  argparse.py  embedding.py  model.py  model_sentece.py  token.py  vocabulary.py
han/encode/: document.py  sentence.py
han/example/: ag_news.py  document.py  model.py  sentence.py
han/front/: api.py
han/model/: attention.py  document.py  sentence.py
tests/: ag_news.py  debug.py  marker.py  test_ag_news.py  test_embedding.py  test_model.py  test_model_sentence.py  test_tokenizer.py  test_vocabulary.py
tests/encode/: test_document.py  test_sentence.py
tests/example/: test_ag_news.py  test_document.py  test_sentence.py
tests/model/: test_attention.py  test_document.py  test_sentence.py
