[metadata]
name = han
version = 0.0.1
[options]
packages = find:
install_requires =
    torch
    torchtext
[easy_install]

[options.packages.find]
exclude = tests; tests.*
[options.entry_points]
console_scripts = han = han:main

[options.extras_require]
dev =
    wheel
    python-lsp-server[all]
    black
    ipython
    pytest
front =
    fastapi
    uvicorn[standard]