[metadata]
name = hierarchical-attention-networks
version = 0.0.3
author = Ryotaro Nakamura
description = An implementation of Hierarchical Attention Networks for Document Classification
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nryotaro/han
project_urls =
    Bug Tracker = https://github.com/nryotaro/han
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License    
[options]
packages = find:
install_requires =
    torch >= 1.11.0
    torchtext  >= 0.12.0
    torchmetrics >= 0.7.2
    torchdata >= 0.3.0
[easy_install]

[options.packages.find]
exclude =
    tests
    tests*
[options.entry_points]
console_scripts = han = han:main

[options.extras_require]
dev =
    build
    twine
    wheel
    python-lsp-server[all]
    black
    ipython
    pytest
